browser/css/jsdialogs.css
/* ... */
/* handling show/hide state */
.hidden {
	display: none !important;
}

/* dialog/popup fade animation */
@media (prefers-reduced-motion: no-preference) {
	.fadeout {
		animation: fade 0.7s;
	}
	.fadein {
		animation: fade reverse 0.15s;
	}
	.fsdialog-overlay {
		animation: fade reverse .3s;
	}
}

@keyframes fade {
	from { opacity: 1 }
	to { opacity: 0 }
}

/* images */

.ui-image {
	margin: auto;
}

.ui-drawing-area-container {
	margin: auto;
}

/* Writer - Insert - Page Number - page preview image */
[data-theme='dark'] #PageNumberDialog #previewImage {
	filter: invert(.95)
}

/* Writer - Table of Contents, Index or Bibliography dialog, Columns tab */
[data-theme='dark'] #ColumnPage #pageexample-img,
[data-theme='dark'] #ColumnPage #column-iconview img {
	filter: invert(.9)
}

/* scrollable content */
.ui-scrollable-content {
	overflow-x: scroll;
	overflow-y: hidden;
	scrollbar-width: none; /* Firefox >= 64 */
	overflow: -moz-scrollbars-none; /* Firefox < 64 */
	-ms-overflow-style: none;  /* Internet Explorer 10+ */
	display: flex;
	align-items: center;
}

.ui-scrollable-content::-webkit-scrollbar { /* WebKit */
	width: 0;
	height: 0;
}

/* formulabar */
#sc_input_window.formulabar {
	border: 1px solid var(--color-border);
	flex-grow: 1;
	background-color: var(--color-background-lighter);
	border-radius: var(--border-radius) 0 0 var(--border-radius);
	align-self: stretch;
}

.ui-custom-textarea {
	position: relative;
}

.ui-custom-textarea-overflow-wrapper {
	overflow: auto;
	overscroll-behavior: none;
	width: 100%;
	height: 100%;
	display: grid;
}

.ui-custom-textarea.focused {
	border: 1px solid var(--color-primary) !important;
}

.ui-custom-textarea,
.ui-custom-textarea-cursor-layer,
.ui-custom-textarea-handle-layer,
.ui-custom-textarea-text-layer {
	font-family: monospace;
	line-height: 1.2;
	font-size: calc(var(--default-font-size)*1.2) !important;
	color: var(--color-main-text);
	overflow-wrap: anywhere;
}

.ui-custom-textarea-cursor-layer,
.ui-custom-textarea-handle-layer,
.ui-custom-textarea-text-layer {
	padding: 4px;
	grid-column: 1;
	grid-row: 1;
	white-space: pre-wrap;
	white-space: wrap;
}

.ui-custom-textarea-cursor-layer {
	color: transparent;
	pointer-events: none;
}

.ui-custom-textarea-handle-layer {
	position: absolute; /* both lets us position handles absolute to this and pulls us out of the overflow: auto */
}

.ui-custom-textarea.focused .ui-custom-textarea-cursor-layer span.cursor:not(.hidden) {
	border-left: 1px solid black;
	margin-left: -1px;
}

.ui-custom-textarea-cursor-layer span.selection:not(.hidden) {
	background-color: var(--color-primary-darker);
	color: var(--color-primary-text);
}

#sc_input_window.formulabar:focus {
	outline-offset: -1px;
}

#sc_input_window.formulabar.expanded {
	border-radius: var(--border-radius) 0 var(--border-radius) var(--border-radius) !important;
}

#formulabar-buttons-toolbox.formulabar.toolbox {
	display: grid;
	grid-auto-flow: column;
	align-items: center;
	grid-column-gap: 4px;
	grid-template-columns: repeat(3, 30px);
}

#formulabar-buttons-toolbox * {
	align-items: center;
	justify-content: center;
}

.unotoolbutton.formulabar {
	display: flex;
}

.formulabar.unotoolbutton {
	margin: 0 !important;
	padding: 0 !important;
	opacity: 0.8;
}

.formulabar.unotoolbutton:hover {
	opacity: 1;
}

.formulabar.unotoolbutton img, .formulabar.ui-pushbutton {
	height: 24px !important;
	width: 24px !important;
	min-width: unset !important;
}

#expand.formulabar {
	height: 30px !important;
	margin: 0 !important;
	border-radius: 0 var(--border-radius) var(--border-radius) 0 !important;
	border-inline-start: none !important;
	background-color: var(--color-main-background) !important;
}

/* Zotero dialog*/

#ZoteroDialog .ui-treeview {
	max-height: 500px;
	max-width: 100%;
}

#ZoteroDialog-mainbox.jsdialog .ui-treeview {
	height: 400px;
}

#ZoteroDialog-search-container.jsdialog, #ZoteroDialog-locale-container.jsdialog {
	margin-block: 7px;
}

#ZoteroDialog-locale-container.jsdialog {
	width: fit-content;
}

#zoterocategory.jsdialog {
	margin-inline-end: 7px;
	min-width: 150px !important;
	overflow-x: scroll;
}

#zoterolist.jsdialog {
	width: calc(min(800px, 80vw));
}

.jsdialog[id^='zotero'][id$='-label'] {
	margin-inline-end: 7px;
}

.jsdialog[id^='zotero'][id$='-label']:not(:first-child) {
	margin-inline-start: 24px;
}

/* hover effect */
.jsdialog.menubutton:not([disabled]):hover,
.ui-listbox:not([disabled]):hover,
.jsdialog.ui-edit:not([disabled]):hover,
.jsdialog.ui-textarea:not([disabled]):hover {
	color: var(--color-text-darker);
	background-color: var(--color-background-lighter);
	border: 1px solid var(--color-border-darker);
}
#toolbar-down .jsdialog.menubutton:not([disabled]):hover,
#toolbar-down .ui-listbox:not([disabled]):hover,
#toolbar-down .jsdialog.ui-edit:not([disabled]):hover,
#toolbar-down .jsdialog.ui-textarea:not([disabled]):hover {
	color: var(--color-text-darker);
	background-color: transparent !important;
	border-color: transparent;
}
#toolbar-down .unobutton .unolabel {
	cursor: pointer;
}
#toolbar-down .unotoolbutton:hover {
	background-color: transparent !important;
	border-color: transparent;
}

#toolbar-down  .jsdialog .ui-edit-container {
	place-content: center;
}

/* Formula Wizard */
#FormulaDialog .ui-tabs-root {
	background-color: var(--color-background-tabs-group);
	border-radius: var(--border-radius-large);
}
#FormulaDialog .jsdialog.ui-tabpage {
	display: flex;
}
#FormulaDialog .jsdialog.ui-tabpage > .ui-grid {
	grid-template-rows: 0 auto !important;
	grid-gap: 0px;
}
#FormulaDialog #StructPage {
	display: grid;
	grid-template-rows: auto 1fr;
	grid-row-gap: 4px;
}
#FormulaDialog #StructPage .ui-treeview-entry div {
	background-color: transparent;
}
#FormulaDialog #search {
	display: flex;
}
#FormulaDialog #search-input {
	flex-grow: 1;
}
#FormulaDialog #ParameterPage > .ui-grid-cell {
	display: flex;
	flex-direction: column;
}
/* ... */

