Calc formularbar fix alignment of sum command and update sum icon

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -2479,7 +2479,7 @@ button.has-img img {
 	grid-auto-flow: column;
 	align-items: center;
 	grid-column-gap: 4px;
-	grid-template-columns: repeat(3, 30px);
+	grid-template-columns: 30px 41px 30px;
 }
 
 #formulabar-buttons-toolbox * {
